<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darkTheme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="shareWith">Поделиться c</string>
    <string name="mailto">Написать в поддержку</string>
    <string name="useragr">Пользовательское соглашение</string>
    <string name="messageShare">Воспользуйся курсом от https://practicum.yandex.ru/learn/android-developer</string>
    <string name="subjectMailto">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="bodyMailto">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="emailMailto">foreneng@yandex.ru</string>
    <string name="userAgreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_search">Ничего не нашлось</string>
    <string name="not_connect">Проблемы со связью</string>
    <string name="not_connect_2_line">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="looking_history">Вы искали</string>
    <string name="track_name">Название песни</string>
    <string name="artist_name">Исполнитель</string>
    <string name="timing">00:00</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorite_text_null">Ваша медиатека пуста</string>
    <string name="playlist_null">Вы не создали \n ни одного плейлиста</string>
    <string name="button_add_playlist">Новый плейлист</string>
    <string name="tab_layout">Вкладки</string>
    <string name="favorite_track">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create_playlist">Создать</string>
    <string name="title_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="message_end_playlist">Завершить создание плейлиста?</string>
    <string name="message_lost_data_playlist">Все несохраненные данные будут потеряны!</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="empty_playlist">Плейлист не создан!</string>
    <string name="permission">Предоставьте разрешение для доступа к медиа рессурсам!</string>
    <string name="tracks_zero">0 треков</string>
    <string name="minutes_zero">0 минут</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="message_toast_insert_playlist">Трек добавлен в плейлист %s!</string>
    <string name="message_toast_insert_playlist_false">Трек уже добавлен в плейлист %s!</string>
    <string name="message_material_dialog_del_track">Хотите удалить трек?</string>
    <string name="negative_button_material_dialog_del_track">Нет</string>
    <string name="positive_button_material_dialog_del_track">Да</string>
    <string name="message_dialog_del_playlist">Хотите удалить плейлист</string>
    <string name="text_titel_edit_playlist">Редактировать</string>
    <string name="text_btn_edit_playlist">Сохранить</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_info_playlist">Редактировать информацию</string>
    <string name="delite_playlist">Удалить плейлист</string>
    <string name="empty_list_playlist">В этом плейлисте пока что нет треков.</string>
    <string name="empty_track_list_playlist">К сожалению в этом плейлисте нет треков!</string>
    <string name="screen_playlist_del_track_message">Удалить трек</string>
    <string name="screen_playlist_del_playlist_message">Удалить плейлист</string>



    <plurals name="count_of_tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="time_of_tracks">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>