<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.PlaylistMaker"
    tools:context=".settings.ui.SettingsFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height_56"
        android:backgroundTint="@color/yp_white"
        android:text="@string/settings"
        android:textAlignment="viewStart"
        android:gravity="center"
        android:paddingStart="@dimen/set_padding16"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="@dimen/text"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/ys_display_medium"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/ButtonStyleSettings"
        android:layout_marginTop="@dimen/set_size24"
        android:paddingRight="@dimen/set_padding_6"
        android:text="@string/darkTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:thumbTint="?attr/colorOnPrimary"
        app:trackTint="?attr/colorSwitchThumbNormal" />

    <Button
        android:id="@+id/buttonShare"
        android:text="@string/share"
        app:icon="@drawable/share"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        style="@style/ButtonStyleSettings"/>

    <Button
        android:id="@+id/buttonMailToSupport"
        android:text="@string/mailto"
        app:icon="@drawable/support"
        app:layout_constraintTop_toBottomOf="@+id/buttonShare"
        style="@style/ButtonStyleSettings"/>

    <Button
        android:id="@+id/buttonUserAgr"
        android:text="@string/useragr"
        app:icon="@drawable/forward"
        app:layout_constraintTop_toBottomOf="@+id/buttonMailToSupport"
        style="@style/ButtonStyleSettings"/>

</LinearLayout>