<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height_56"
        android:backgroundTint="@color/yp_white"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/search"
        android:textAlignment="viewStart"
        android:gravity="center"
        android:paddingStart="@dimen/set_padding16"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="@dimen/text"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_height_52"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/set_padding_10"
            android:drawableTint="?attr/colorOnPrimarySurface"
            android:focusableInTouchMode="true"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="@dimen/set_size24"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorOnPrimarySurface"
            android:textCursorDrawable="@drawable/color_cursor" />

        <ImageButton
            android:id="@+id/clear_text"
            android:layout_width="@dimen/set_size20"
            android:layout_height="@dimen/set_size20"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/set_size24"
            android:visibility="gone"
            android:background="@color/yp_ligth_grey"
            app:srcCompat="@drawable/clear_button" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/set_padding16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginLeft="@dimen/set_marginSearchLists13"
        android:layout_marginRight="@dimen/set_marginSearchLists13"/>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/set_marginTop140"
        android:layout_gravity="center"
        android:indeterminateTint="@color/yp_blue"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/nothing_was_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/set_padding_102"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/not_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/set_padding16"
            android:text="@string/not_search"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/set_textSize19" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/communication_problems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/set_padding_102"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/not_connect" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/set_padding16"
            android:text="@string/not_connect"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/set_textSize19" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/set_size20"
            android:text="@string/not_connect_2_line"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/set_textSize19" />

        <Button
            android:id="@+id/update"
            android:layout_marginTop="@dimen/set_size20"
            style="@style/ButtonStyle"
            android:text="@string/update"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/set_size24"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/set_padding18"
            android:layout_marginBottom="@dimen/set_padding_12"
            android:text="@string/looking_history"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/set_textSize19" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/set_padding16"
            android:layout_marginBottom="@dimen/set_padding_4"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginLeft="@dimen/set_marginSearchLists13"
            android:layout_marginRight="@dimen/set_marginSearchLists13"/>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/set_size24"
            android:paddingBottom="@dimen/set_size24">
        <Button
            android:id="@+id/clear_history"
            style="@style/ButtonStyle"
            android:text="@string/clear_history"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>