<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorSecondary"
    android:theme="@style/colorBarWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".media.ui.playlist.CreatePlaylistFragment">

    <Button
        android:id="@+id/back_playlist"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height_56"
        android:backgroundTint="@color/yp_white"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="@dimen/text"
        app:icon="@drawable/back"
        app:iconPadding="@dimen/set_size20"
        app:iconTint="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/artwork"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginStart="@dimen/set_size24"
        android:layout_marginTop="@dimen/set_size26"
        android:layout_marginEnd="@dimen/set_size24"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_playlist"
        android:src="@drawable/image_playlist"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/focus_tint_list"
        app:hintTextColor="@color/focus_tint_list"
        android:layout_marginStart="@dimen/set_padding16"
        android:layout_marginTop="@dimen/set_size32"
        android:layout_marginEnd="@dimen/set_padding16"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artwork">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="@dimen/main_height_56"
            android:hint="@string/title_playlist"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/focus_tint_list"
        app:hintTextColor="@color/focus_tint_list"
        android:layout_marginStart="@dimen/set_padding16"
        android:layout_marginTop="@dimen/set_padding16"
        android:layout_marginEnd="@dimen/set_padding16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_height_56"
            android:singleLine="true"
            android:hint="@string/description_playlist"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_btn"
        style="@style/ButtonStylePlayList"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="@dimen/set_padding16"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="@dimen/set_padding16"
        android:layout_marginBottom="@dimen/set_size32"
        android:contextClickable="true"
        android:enabled="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/create_playlist"
        android:textColor="@color/yp_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>