<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_ligth_grey"
    android:orientation="vertical"
    tools:context=".media.ui.playlist.PlaylistScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <Button
        android:id="@+id/back_ap"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height_56"
        android:contentDescription=" "
        app:icon="@drawable/back"
        app:iconTint="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/set_size24"
            android:layout_marginTop="@dimen/set_size24"
            android:layout_marginEnd="@dimen/set_size24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/incorrect_link312" />

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/set_padding16"
            android:layout_marginTop="@dimen/set_size24"
            android:text="@string/playlist"
            android:maxLines="1"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_bold"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/set_textSize24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artwork" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/set_padding16"
            android:layout_marginRight="@dimen/set_searchItem_8dp"

            android:text="@string/description_playlist"
            android:maxLines="1"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/set_textSize18"
            android:textColor="@color/yp_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlist_name" />

        <TextView
            android:id="@+id/time_all_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/set_padding16"
            android:ellipsize="end"
            android:maxLength="40"
            android:maxLines="1"
            android:text="@string/minutes_zero"
            android:textColor="@color/black"
            android:textSize="@dimen/set_textSize18"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <ImageView
            android:id="@+id/icon_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/set_padding5"
            android:foregroundGravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/point"
            app:layout_constraintBottom_toBottomOf="@id/time_all_track"
            app:layout_constraintEnd_toStartOf="@+id/num_tracks"
            app:layout_constraintStart_toEndOf="@+id/time_all_track"
            app:layout_constraintTop_toTopOf="@+id/time_all_track"
            app:tint="@color/yp_black" />

        <TextView
            android:id="@+id/num_tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/set_padding5"
            android:text="@string/tracks_zero"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/set_textSize18"
            app:layout_constraintStart_toEndOf="@+id/icon_item"
            app:layout_constraintTop_toBottomOf="@+id/description"/>

        <ImageView
            android:id="@+id/share"
            android:layout_width="@dimen/set_size24"
            android:layout_height="@dimen/set_size24"
            android:src="@drawable/share"
            android:layout_marginStart="@dimen/set_padding16"
            android:layout_marginTop="@dimen/set_padding16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_all_track"
            app:tint="@color/yp_black" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="@dimen/set_size24"
            android:layout_height="@dimen/set_size24"
            android:src="@drawable/menu"
            android:layout_marginStart="@dimen/set_padding16"
            android:layout_marginTop="@dimen/set_padding16"
            app:layout_constraintStart_toEndOf="@id/share"
            app:layout_constraintTop_toBottomOf="@+id/num_tracks" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_button_sheet"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/set_padding16"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/rectangle_width_50"
            android:layout_height="@dimen/rectangle_height_4"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/rectangle_top_8"
            android:layout_marginBottom="@dimen/marginTop12"
            android:background="@drawable/rounder_line_button_sheet" />

        <TextView
            android:id="@+id/empty_playlist_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_list_playlist"
            android:visibility="gone"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/set_textSize18"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlist_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/set_marginTop140"
            android:layout_gravity="center"
            android:indeterminateTint="@color/yp_blue"
            android:visibility="gone"/>


    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/menu_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_button_sheet"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/set_padding16"
        app:behavior_hideable="true"
        app:behavior_peekHeight = "500dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/line_menu"
            android:layout_width="@dimen/rectangle_width_50"
            android:layout_height="@dimen/rectangle_height_4"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/rectangle_top_8"
            android:layout_marginBottom="@dimen/marginTop12"
            android:background="@drawable/rounder_line_button_sheet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/set_padding16"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/playlist_image_menu"
            android:layout_width="@dimen/set_searchItem_img45"
            android:layout_height="@dimen/set_searchItem_img45"
            android:layout_marginRight="@dimen/rectangle_top_8"
            android:src="@drawable/radius_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        <TextView
            android:id="@+id/playlist_name_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text=""
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/set_textSize16"/>


        <TextView
            android:id="@+id/count_track_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/tracks_zero"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/set_textSize11"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/share_menu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/set_textSize16"
            android:textColor="?attr/colorPrimaryVariant"
            android:text="@string/share_playlist"/>

        <TextView
            android:id="@+id/edit_info_menu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/set_textSize16"
            android:textColor="?attr/colorPrimaryVariant"
            android:text="@string/edit_info_playlist"/>

        <TextView
            android:id="@+id/del_playlist"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/set_textSize16"
            android:textColor="?attr/colorPrimaryVariant"
            android:text="@string/delite_playlist"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>